app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Async_Request_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Async_Request_Id__c</fullName>
        <label>Async Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>