app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Batch_Job_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>