app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Completed_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>