app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Job_Completed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>