app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Org__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Temp Logs</relationshipLabel>
        <relationshipName>Temp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>