app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Specified_Tests__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>