app/main/default/objects/Flosum__Temp_Log__c/fields/Flosum__Succeed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>